<resources>
    <string name="app_name">Payroll</string>

    <string name="welcome_message">Welcome!</string>
    <string name="login_message">Please login your account</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_login">Login</string>
    <string name="register_link">Create Account</string>

    <string name="register">Register</string>
    <string name="register_message">Create your account to get started</string>
    <string name="register_name">Enter Full Name</string>
    <string name="register_address">Enter Address</string>
    <string name="register_contact">Enter Contact Number</string>
    <string name="register_password">Enter Password</string>
    <string name="register_confirmPassword">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="login_link">Login to your account</string>

    <string name="dashboard">Dashboard</string>
    <string name="dashboard_username">Username</string>

    <string name="card_overview_title">Payroll Information Overview:</string>
    <string name="current_salary">Current Salary: ₱00,000</string>
    <string name="last_payslip">Last Payslip: </string>
    <string name="upcoming_paydate">Upcoming Pay Date: DD/MM/YYYY</string>

    <string name="dashboard_payslips">Payslips</string>
    <string name="dashboard_profile">Personal Profile</string>
    <string name="dashboard_attendance">Attendance</string>
    <string name="dashboard_leave">Leave / Time-off</string>
    <string name="dashboard_deductions">Deductions</string>
    <string name="dashboard_notifications">Notifications</string>
    <string name="dashboard_support">Support / Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>