<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgreen"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_italic"
                android:text="@string/register_message"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_name"
                android:padding="18dp"
                android:textSize="18sp"
                android:layout_marginTop="14dp"
                />

            <EditText
                android:id="@+id/registerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_address"
                android:padding="18dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/registerContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_contact"
                android:padding="18dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:padding="18dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/registerConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_confirmPassword"
                android:padding="18dp"
                android:textSize="18sp"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/darkgreen"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/btn_register" />

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/login_link"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>