<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgreen"
    tools:context=".LoginActivity">

   <androidx.cardview.widget.CardView
       android:id="@+id/loginCard"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_margin="24dp"
       app:cardCornerRadius="20dp"
       app:cardElevation="10dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:padding="24dp">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:fontFamily="@font/poppins_bold"
               android:text="@string/welcome_message"
               android:textColor="@color/black"
               android:textSize="24sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:fontFamily="@font/poppins_italic"
               android:text="@string/login_message"
               android:textColor="@color/black"
               android:textSize="12sp" />

           <EditText
               android:id="@+id/loginName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/login_name"
               android:padding="18dp"
               android:textSize="18sp"
               android:layout_marginTop="16dp"
               />

           <EditText
               android:id="@+id/loginPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/login_password"
               android:padding="18dp"
               android:textSize="18sp"
               android:inputType="textPassword"
               android:layout_marginTop="12dp"
               />

           <TextView
               android:id="@+id/forgotPassword"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/forgot_password"
               android:layout_gravity="right"
               android:padding="10dp"/>

           <Button
               android:id="@+id/btnLogin"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="10dp"
               android:backgroundTint="@color/darkgreen"
               android:fontFamily="@font/poppins_semibold"
               android:text="@string/btn_login" />

           <TextView
               android:id="@+id/registerLink"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="16dp"
               android:fontFamily="sans-serif"
               android:text="@string/register_link"
               android:textSize="18sp" />

       </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>